# safe-m3-ucrl

./: CITATION.cff.txt  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
checkpoints/swarm_1d/known/50pct-constraint/: policy_final.pt
checkpoints/swarm_1d/known/60pct-constraint/: policy_final.pt
checkpoints/swarm_1d/known/70pct-constraint/: policy_final.pt
checkpoints/swarm_1d/known/80pct-constraint/: policy_final.pt
checkpoints/swarm_1d/known/90pct-constraint/: policy_final.pt
configs/swarm_1d/known/: swarm_1d_known_50pct-constraint.yaml  swarm_1d_known_60pct-constraint.yaml  swarm_1d_known_70pct-constraint.yaml  swarm_1d_known_80pct-constraint.yaml  swarm_1d_known_90pct-constraint.yaml  swarm_1d_known_95pct-constraint.yaml  swarm_1d_known_no-constraint.yaml
configs/swarm_1d/unknown/: swarm_1d_unknown_50pct-constraint.yaml  swarm_1d_unknown_60pct-constraint.yaml  swarm_1d_unknown_70pct-constraint.yaml  swarm_1d_unknown_80pct-constraint.yaml  swarm_1d_unknown_90pct-constraint.yaml  swarm_1d_unknown_95pct-constraint.yaml  swarm_1d_unknown_no-constraint.yaml
configs/vehicle_repositioning/known/: taxi_known_625_85pct-constraint_00175-epsilon_3-median_run-1.yaml  taxi_known_625_no-constraint_00175-epsilon_3-median_run-1.yaml
safe_mf/: main.py
safe_mf/alg/: safe_mf_marl.py
safe_mf/envs/: env.py  swarm_1d.py  swarm_1d_linear.py  swarm_1d_toroidal.py  vehicle_repositioning_sequential.py
safe_mf/models/: ensemble.py  gradient_descent.py  policy.py
safe_mf/utils/: data.py  distributions.py  entropy.py  gmm.py  parser.py  stats_tracker.py  utils.py
(+44 files in other folders)
