[metadata]
name = safe-m3-ucrl
version = 0.0.1
author = Matej Jusup
author_email = matej.jusup@gmail.com
license = BSD-3-Clause

[options]
install_requires =
    numpy>=1.19.5
    pyyaml>=5.4.1
    torch>=1.12.1
    torchist>=0.1.7
    tqdm>=4.62.3
    wandb>=0.13.10
python_requires = >=3.8
packages = find: